# rust-local-camera-streaming-app

./: README.md
camera_streamer/: .gitignore  build.sh  package.json
camera_streamer/src/: App.tsx
camera_streamer/src-tauri/: Cargo.toml  tauri.conf.json
camera_streamer/src-tauri/.cargo/: config.toml
camera_streamer/src-tauri/icons/: icon.icns
camera_streamer/src-tauri/src/: lib.rs  main.rs  simple_stream.rs
video-receiver/: Cargo.toml  build-ffmpeg.sh  build.rs  build.sh  create_virtual_camera_video4linux2loopback.sh  reset_v4l2loopback.sh
video-receiver/.cargo/: config.toml
video-receiver/src/: display.rs  main.rs
