[package]
name = "video-receiver"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
ffmpeg-next = { version = "8.0.0", features = ["static", "build", "build-lib-x264", "build-license-gpl"]}
sdl2 = "0.38.0"
tokio = { version = "1.48.0", features = ["full"] }
